Add missing files, wrong .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,10 @@ arduino-testlib.exe
 .vscode/
 
 # Data directories
-cli-datadir/
-datadir/
+/cli-datadir/
+/datadir/
 
 # Output
-report/
+/report/
 
 
